Add Ottodecks page, add carousel imgs, adjust content, add favicons, change Instagram filter pics,

--- a/2d-platformer.html
+++ b/2d-platformer.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>2D Platformer - Sam Sherrod</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -87,7 +88,7 @@
                     <p class="intro-text text-center">
                         Released September 2022<br />
                         Student Group Agile Software Development Project<br />
-                        <strong>Role: </strong> Lead Developer and Programmer
+                        <strong>Role: </strong> Lead Developer and Game Programmer
                     </p> 
 
                     <a href="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png">
@@ -111,9 +112,9 @@
                     <p><strong>Technologies used:</strong>
                         <ul>
                             <li>JavaScript</li>
-                            <li>Phaser 3.50.0</li>
-                            <li>Tiled 1.8.5</li>
-                            <li>Node 16.15.1</li>
+                            <li><a href="https://phaser.io/"><strong>Phaser 3.50.0</strong></a></li>
+                            <li><a href="https://www.mapeditor.org/"><strong>Tiled 1.8.5</strong></a></li>
+                            <li><a href="https://nodejs.org/tr/blog/release/v16.15.1/"><strong>Node 16.15.1</strong></a></li>
                             <li>Art assets from Itch.io</li>
                         </ul>
                     </p>
