--- a/instagram-filter.html
+++ b/instagram-filter.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Instagram Filter - Sam Sherrod</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -114,11 +115,11 @@
                     <p> This is an image processing tool that allows you to apply 10 different filters to a preset image. It
                         contains a border, vignette, and a radial blur, as well as sliders and checkboxes to allow the
                         user to adjust the image. </p>
-                    <p>This is a tool I made for a graphics programming course at the University of London using p5.js from scratch. Each filter
-                        is created by looping over pixel in the image and applying a function using a matrix to change the red, green, blue, and
-                        alpha values of each pixel.</p>
+                    <p>This is a tool I made for a graphics programming course at the University of London using p5.js from scratch. The image on the
+                        left is copied and displayed on the right. Then each filter is created by looping over every pixel in the copied image and,
+                        applies a function using a specific matrix to change the red, green, blue, and alpha values of each pixel.</p>
 
-                    <p>Features of the tool include:</p>
+                    <p><strong>Features include:</strong></p>
                     <ul>
                         <li>Able to switch between 10 filters</li>
                         <li>Multiple sliders to dynamically change effects</li>
