--- a/ottodecks-dj-app.html
+++ b/ottodecks-dj-app.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Average Face Filter - Sam Sherrod</title>
+    <title>DJ App - Sam Sherrod</title>
     <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
 
     <!-- Bootstrap Core CSS -->
@@ -82,47 +82,59 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Average Face Filter</strong> - Image Processing Tool
+                        <strong>DJ App</strong> - Audio Manipulation Program
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
                         Released March 2022</br />
-                        Student Solo Graphics Programming Project<br />
-                        <strong>Role: </strong> Solo Developer
+                        Student Solo Object Oriented Programming Project<br />
+                        <strong>Role: </strong> Solo Developer/Audio Programmer
                     </p> 
 
-                    <a href="Assets/Images/Projects/Average Face Filter/AverageFaceDefault.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
+                    <a href="Assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                     </a>
-                    <a href="Assets/Images/Projects/Average Face Filter/AverageFace50.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFace50.png" alt="">
+                    <a href="Assets/Images/Projects/Ottodecks/Ottodecks Default.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Ottodecks/Ottodecks Default.png" alt="">
                     </a>
-                    <a href="Assets/Images/Projects/Average Face Filter/AverageFace75.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFace75.png" alt="">
+                    <a href="Assets/Images/Projects/Ottodecks/Ottodecks Track Waveform.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Ottodecks/Ottodecks Track Waveform.png" alt="">
                     </a>
-                    <a href="Assets/Images/Projects/Average Face Filter/AverageFace100.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFace100.png" alt="">
+                    <a href="Assets/Images/Projects/Ottodecks/Ottodecks Playlist.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Ottodecks/Ottodecks Playlist.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
 
-                    <p> This is an image processing tool that allows you to blend multiple photos of faces together. Press the "D" key to 
-                        load a random image of someone's face. While the "lerp" (blend) checkbox is on, adjust the slider to see the effect.
-                        While the slider bar is at 100%, every image will look the same.</p>
-                    <p>This is a tool I made for a graphics programming course at the University of London using p5.js from scratch.</p>
+                    <p> This is an audio application that allows you to manipulate music tracks as a DJ would. </p>
+                    <p>This is a program I made for an object oriented programming course at the University of London using C++ and the JUCE library. I 
+                        extended the application beyond the class requirements by improving the GUI including two DJ decks, sliders, buttons, a volume and speed
+                        control, and the ability to scroll through each track by displaying it as a waveform.</p>
+                    <p> It contains multiple classes with constructors that interact with one another, references, pointers, and header files for each cpp file.
+
+                    <p><strong>Features include:</strong></p>
+                    <ul>
+                        <li>creating a playlist by loading audio files into it</li>
+                        <li>uploading a separate music track from the playlist onto each of the two deck instances for manipulation</li>
+                        <li>functionality to change the volume and speed of each track playing</li>
+                        <li>functionality to change the speed of each track playing</li>
+                        <li>the ability to scroll through a track that's loaded onto a deck</li>
+                        <li>search the playlist for a particular track</li>
+                        <li>add or delete tracks from the playlist</li>
+                        <li>independently Play, Pause, Stop, or Reset a track that's loaddd onto a deck</li>
+                        <li>view the the name and length of each track that is playing in seconds.</li>
+                    </ul>
 
                     <p><strong>Technologies used:</strong>
                         <ul>
-                            <li>JavaScript</li>
-                            <li>p5.js</li>
-                            <li>Images provided by UoL</li>
+                            <li>C++</li>
+                            <li>JUCE - https://juce.com/</li>
+                            <li>Audio tracks provided by UoL</li>
                         </ul>
                     </p>
 
-                    <a href="https://samsherrod.itch.io/average-face-filter" target="_blank" class="btn btn-default btn-lg">Try Tool Online</a>
-                    
                     <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
-                        concerns. If you would like to see the code for this, please <a href="contact.html"><strong>contact</strong></a> me.</p>
+                        concerns. It is also not viewable online. If you would like to see the code for this, please <a href="contact.html"><strong>contact</strong></a> me.</p>
                 </div>
             </div>
         </div>
