--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Projects - Sam Sherrod</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -80,7 +81,8 @@
             <div class="box">      
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project </h2>
+                    <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity</strong></h2>
                     <hr>
                     <a href="red-knight.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
@@ -90,6 +92,7 @@
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It is currently in development being built by myself and 3 other students with the Unity game engine.</p>
                     <a href="red-knight.html" class="btn btn-default btn-lg">Read More</a>
+                    <p><strong>Made with Unity, C#</strong></p>
                 </div>
             </div>
         </div>
@@ -99,9 +102,10 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center"> <strong>Star Hunter</strong> Bow and Arrow VR Project - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>C# | VR Dev | Game Dev | Unity</strong></h2>
                     <hr>
                     <a href="star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 2.png" alt="">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>In Development - Expected Release March 2023</p>
@@ -115,7 +119,26 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Instagram Filter</strong> - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>DJ App</strong>Audio application - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>C++ | Audio Programming | JUCE</strong></h2>
+                    <hr>
+                    <a href="ottodecks-dj-app.html">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released March 2022</p>
+                    <p>A DJ application that allows a user to add music tracks to a playlist, upload selected tracks onto 2 separate decks, and manipulate them as a DJ would.</p>
+                    <a href="ottodecks-dj-app.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Instagram Filter</strong>Image Processing - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
                     <hr>
                     <a href="instagram-filter.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
@@ -132,7 +155,26 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Average Face Filter</strong> - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>2D Platformer</strong> - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>JavaScript, Tiled, NPM | Game Dev | Agile</strong></h2>
+                    <hr>
+                    <a href="2d-platformer.html">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released September 2022</p>
+                    <p>Navigate each carefully crafted level while fighting you way through enemies and jumping on platforms!</p>
+                    <a href="2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Average Face Filter</strong>Image Processing - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
                     <hr>
                     <a href="average-face.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
@@ -145,22 +187,6 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center"> <strong>2D Platformer</strong> - Student Project</h2>
-                    <hr>
-                    <a href="2d-platformer.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
-                    </a>
-                    <hr class="visible-xs">
-                    <p>Released September 2022</p>
-                    <p>Navigate each carefully crafted level while fighting you way through enemies and jumping on platforms!</p>
-                    <a href="2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
-                </div>
-            </div>
-        </div>
     </div>
     <!-- /.container -->
 
