--- a/red-knight.html
+++ b/red-knight.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Red Knight - Sam Sherrod</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -98,10 +99,10 @@
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It is currently in development being built by myself and 3 other students with the Unity game engine.
                          It is inspired by games such as Megaman and Enter the Gungeon. A unique aspect of the it is that it 
-                         is both a 2D action platformer and a top down action game similar to Zelda II: The Adventure of Link.
-                    </p>
+                         is both a 2D action platformer and a top down action game similar to Zelda II: The Adventure of Link.</p>
                     <p>This is a group project made for University of London's Game Development class. The game will be finished 
                          and playable on WebGL in March 2023.</p>
+
                     <p>I have more experience with Unity than the rest of my team, and my role in the development phase has mainly
                         been to support the team. This has included:
                         <ul>
