--- a/star-hunter.html
+++ b/star-hunter.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Star Hunter - Sam Sherrod</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -87,7 +88,7 @@
                     <p class="intro-text text-center">
                         In Development - Expected Release March 2023</br />
                         Student Solo Virtual Reality Project<br />
-                        <strong>Role: </strong> Solo Developer
+                        <strong>Role: </strong> Solo VR Developer
                     </p> 
                     <a href="Assets/Images/Projects/Star Hunter/Star Hunter 1.png">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
@@ -106,12 +107,13 @@
 
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
                         When all of the stars are connected, an image will be shown, and the next set of stars will be displayed in the sky. 
-                        It is currently in development built soley by myself. I'm very interested in the field of virtual reality, and have
+                        It is currently in development built solely by myself. I'm very interested in the field of virtual reality, and have
                         thoroughly enjoyed working on this project. It is made in the Unity game engine using Unity's XR Toolkit, and is tested
                         for the Meta Quest 2.</p>
                     <p>This is a solo project made for University of London's Virtual Reality  class. The game will be finished and 
                         playable on Windows, Mac, WebGL, and the Meta Quest 2 in March 2023.</p>
                     <p><strong>Game features</strong> will include:</p>
+                    
                     <ul>
                         <li>a working virtual bow and arrow with precise aiming</li>
                         <li>virtual hands that move and animate with the player's hands</li>
@@ -121,7 +123,7 @@
                         <li>a virtual menu</li>
                         <li>unlimited arrows</li>
                         <li>a large open area of grass to move around in</li>
-                        <li>a nightime sky</li>
+                        <li>a nighttime sky</li>
                     </ul>
 
                     <p><strong>Technologies used:</strong>
@@ -136,8 +138,9 @@
                     </ul>
                     </p>
 
+                    <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
+                    <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
                     <a href="https://github.com/samsherrod/Star-Hunter" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
-                    
                     <p><strong>Keep in mind that this project is in development, and this is not a reflection of the final or completed project.</strong></p>
                 </div>
             </div>
