--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Contact - Sam Sherrod</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
