--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Sam Sherrod</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -86,17 +87,25 @@
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
                         </ol>
 
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
+                                <img class="img-responsive img-full" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                             </div>
                             <div class="item">
+                                <img class="img-responsive img-full" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
                             </div>
                             <div class="item">
+                                <img class="img-responsive img-full" src="Assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                             </div>
                             <div class="item">
+                                <img class="img-responsive img-full" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                             </div>
                         </div>
 
@@ -129,12 +138,12 @@
                     </h2>
                     
                     <hr>
-                    <a href="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png">
+                    <a href="red-knight.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
-                        It is currently in development being built by myself and 3 other students with the Unity game engine.</p>
+                        It is currently in development being built by myself and 3 other students using the Unity game engine.</p>
                     <a href="red-knight.html" class="btn btn-default btn-lg">Learn More</a>
                     <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game</a>
                 </div>
@@ -144,13 +153,16 @@
                         <strong>Star Hunter</strong> - Bow and Arrow VR Project
                     </h2>
                     <hr>
-                    <a href="Assets/Images/Projects/Star Hunter/Star Hunter 2.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 2.png" alt="">
+                    <a href="star-hunter.html">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
-                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
-                    <p><strong>Note:</strong> It is not available for public viewing yet.</p>
+                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
+                        It is currently in development being built by myself using the Unity game engine.
+                    </p>
+                    <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
                     <a href="star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
+                    <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
                 </div>
             </div>
         </div>
