--- a/2d-platformer.html
+++ b/2d-platformer.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>2D Platformer - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg">
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
