Fix title spacing in project.html

--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project </h2>
-                    <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity</strong></h2>
+                    <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Agile</strong></h2>
                     <hr>
                     <a href="red-knight.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
@@ -119,7 +119,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>DJ App</strong>Audio application - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>DJ App</strong> Audio application - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>C++ | Audio Programming | JUCE</strong></h2>
                     <hr>
                     <a href="ottodecks-dj-app.html">
@@ -137,7 +137,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Instagram Filter</strong>Image Processing - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>Instagram Filter</strong> Image Processing - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
                     <hr>
                     <a href="instagram-filter.html">
@@ -173,7 +173,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Average Face Filter</strong>Image Processing - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>Average Face Filter</strong> Image Processing - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
                     <hr>
                     <a href="average-face.html">
