--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                     and decision making, and an excellent understanding of accounting, and finance.</p>
                 
                 <p>I'm a final year computer science student at the University of London expecting to finish up my bachelor
-                     of science in the fall of 2023 with a gpa of 4.0 (First class Honours). I am actively looking to join 
+                     of science in March  of 2024 with a gpa of 4.0 (First class Honours). I am actively looking to join 
                      a AAA studio to collaborate with, and learn all aspects of software development within the games 
                      industry.</p>
 
