--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,6 @@
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It is currently in development being built by myself and 3 other students with the Unity game engine.</p>
                     <a href="red-knight.html" class="btn btn-default btn-lg">Read More</a>
-                    <p><strong>Made with Unity, C#</strong></p>
                 </div>
             </div>
         </div>
@@ -111,6 +110,24 @@
                     <p>In Development - Expected Release March 2023</p>
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
                     <a href="star-hunter.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Still Life Composition</strong> Bow and Arrow VR Project - Personal Project</h2>
+                    <h2 class="intro-text text-center"> <strong>Graphics Programming | Unity | Shaders </strong></h2>
+                    <hr>
+                    <a href="still-life.html">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>February 2023</p>
+                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
+                    <a href="still-life.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -173,16 +190,17 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Average Face Filter</strong> Image Processing - Student Project</h2>
-                    <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
+                    <h2 class="intro-text text-center"> <strong>Smart Home</strong> Front and Backend - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>HTML | CSS | JavaScript | NodeJS | SQL | EJS
+                        Front and Backend Development</strong></h2>
                     <hr>
-                    <a href="average-face.html">
+                    <a href="projects/smart-home.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
                     <p>An image processing tool that allows a user to blend multiple faces together</p>
-                    <a href="average-face.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="projects/smart-home.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
