Move projects into project folder and update all

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Contact - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/Images/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -66,7 +66,7 @@
                         <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="assets/files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
