--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/Images/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -66,7 +66,7 @@
                         <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="assets/files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -93,19 +93,19 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                                <img class="img-responsive img-full" src="assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                                <img class="img-responsive img-full" src="assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="Assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                                <img class="img-responsive img-full" src="assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                                <img class="img-responsive img-full" src="assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                                <img class="img-responsive img-full" src="assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                             </div>
                         </div>
 
@@ -138,13 +138,13 @@
                     </h2>
                     
                     <hr>
-                    <a href="red-knight.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                    <a href="projects/red-knight.html">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It is currently in development being built by myself and 3 other students using the Unity game engine.</p>
-                    <a href="red-knight.html" class="btn btn-default btn-lg">Learn More</a>
+                    <a href="projects/red-knight.html" class="btn btn-default btn-lg">Learn More</a>
                     <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game</a>
                 </div>
                  <div class="col-lg-12">
@@ -153,15 +153,15 @@
                         <strong>Star Hunter</strong> - Bow and Arrow VR Project
                     </h2>
                     <hr>
-                    <a href="star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="projects/star-hunter.html">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
                         It is currently in development being built by myself using the Unity game engine.
                     </p>
                     <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
-                    <a href="star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
+                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
                     <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
                 </div>
             </div>
