--- a/projects/2d-platformer.html
+++ b/projects/2d-platformer.html
@@ -10,13 +10,13 @@
     <meta name="author" content="">
 
     <title>2D Platformer - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/Images/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="../css/business-casual.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
@@ -48,25 +48,25 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Sam Sherrod</a>
+                <a class="navbar-brand" href="../index.html">Sam Sherrod</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="../about.html">About</a>
                     </li>
                     <li>
-                        <a href="projects.html">Projects</a>
+                        <a href="../projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="../contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="../assets/files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -91,8 +91,8 @@
                         <strong>Role: </strong> Lead Developer and Game Programmer
                     </p> 
 
-                    <a href="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                    <a href="../assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
@@ -146,10 +146,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
