--- a/projects/smart-home.html
+++ b/projects/smart-home.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Smart Home Application - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="../Assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/Images/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -66,7 +66,7 @@
                         <a href="../contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="../Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="../assets/files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -90,17 +90,17 @@
                         Student Solo Front and Backend Web Project<br />
                         <strong>Role: </strong> Solo Front and Backend Developer
                     </p> 
-                    <a href="../Assets/Images/Projects/Star Hunter/Star Hunter 1.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 1.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
-                    <a href="../Assets/Images/Projects/Star Hunter/Star Hunter 2.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Star Hunter/Star Hunter 2.png" alt="">
+                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 2.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 2.png" alt="">
                     </a>
-                    <a href="../Assets/Images/Projects/Star Hunter/Star Hunter 3.png">
-                        <img class="img-responsive img-border img-left" src="..//Images/Projects/Star Hunter/Star Hunter 3.png" alt="">
+                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 3.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 3.png" alt="">
                     </a>
-                    <a href="../Assets/Images/Projects/Star Hunter/Star Hunter 4.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Star Hunter/Star Hunter 4.png" alt="">
+                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 4.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 4.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
