--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Projects - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/Images/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -66,7 +66,7 @@
                         <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="assets/files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -84,14 +84,14 @@
                     <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project </h2>
                     <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Agile</strong></h2>
                     <hr>
-                    <a href="red-knight.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                    <a href="projects/red-knight.html">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>In Development - Expected Release March 2023</p>
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It is currently in development being built by myself and 3 other students with the Unity game engine.</p>
-                    <a href="red-knight.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="projects/red-knight.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -103,13 +103,13 @@
                     <h2 class="intro-text text-center"> <strong>Star Hunter</strong> Bow and Arrow VR Project - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>C# | VR Dev | Game Dev | Unity</strong></h2>
                     <hr>
-                    <a href="star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="projects/star-hunter.html">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>In Development - Expected Release March 2023</p>
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
-                    <a href="star-hunter.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -121,13 +121,13 @@
                     <h2 class="intro-text text-center"> <strong>Still Life Composition</strong> Bow and Arrow VR Project - Personal Project</h2>
                     <h2 class="intro-text text-center"> <strong>Graphics Programming | Unity | Shaders </strong></h2>
                     <hr>
-                    <a href="still-life.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="projects/still-life.html">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>February 2023</p>
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
-                    <a href="still-life.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="projects/still-life.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -139,13 +139,13 @@
                     <h2 class="intro-text text-center"> <strong>DJ App</strong> Audio application - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>C++ | Audio Programming | JUCE</strong></h2>
                     <hr>
-                    <a href="ottodecks-dj-app.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                    <a href="projects/ottodecks-dj-app.html">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
                     <p>A DJ application that allows a user to add music tracks to a playlist, upload selected tracks onto 2 separate decks, and manipulate them as a DJ would.</p>
-                    <a href="ottodecks-dj-app.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="projects/ottodecks-dj-app.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -157,13 +157,13 @@
                     <h2 class="intro-text text-center"> <strong>Instagram Filter</strong> Image Processing - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
                     <hr>
-                    <a href="instagram-filter.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                    <a href="projects/instagram-filter.html">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
                     <p>An image processing tool that allows a user to apply 10 different filters as well as other tools to an image</p>
-                    <a href="instagram-filter.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="projects/instagram-filter.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -175,13 +175,13 @@
                     <h2 class="intro-text text-center"> <strong>2D Platformer</strong> - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>JavaScript, Tiled, NPM | Game Dev | Agile</strong></h2>
                     <hr>
-                    <a href="2d-platformer.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                    <a href="projects/2d-platformer.html">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released September 2022</p>
                     <p>Navigate each carefully crafted level while fighting you way through enemies and jumping on platforms!</p>
-                    <a href="2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="projects/2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -195,7 +195,7 @@
                         Front and Backend Development</strong></h2>
                     <hr>
                     <a href="projects/smart-home.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
