--- a/projects/instagram-filter.html
+++ b/projects/instagram-filter.html
@@ -10,13 +10,13 @@
     <meta name="author" content="">
 
     <title>Instagram Filter - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/Images/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="../css/business-casual.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
@@ -48,25 +48,25 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Sam Sherrod</a>
+                <a class="navbar-brand" href="../index.html">Sam Sherrod</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="../about.html">About</a>
                     </li>
                     <li>
-                        <a href="projects.html">Projects</a>
+                        <a href="../projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="../contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="../assets/files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -91,23 +91,23 @@
                         <strong>Role: </strong> Solo Developer
                     </p> 
 
-                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                    <a href="../assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                     </a>
-                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - Gray.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - Gray.png" alt="">
+                    <a href="../assets/Images/Projects/Instagram Filter/Instagram Filter - Gray.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Instagram Filter/Instagram Filter - Gray.png" alt="">
                     </a>
-                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - EdgeColor.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - EdgeColor.png" alt="">
+                    <a href="../assets/Images/Projects/Instagram Filter/Instagram Filter - EdgeColor.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Instagram Filter/Instagram Filter - EdgeColor.png" alt="">
                     </a>
-                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - Inverse.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - Inverse.png" alt="">
+                    <a href="../assets/Images/Projects/Instagram Filter/Instagram Filter - Inverse.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Instagram Filter/Instagram Filter - Inverse.png" alt="">
                     </a>
-                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png" alt="">
+                    <a href="../assets/Images/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png" alt="">
                     </a>
-                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - Custom.png">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - Custom.png" alt="">
+                    <a href="../assets/Images/Projects/Instagram Filter/Instagram Filter - Custom.png">
+                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Instagram Filter/Instagram Filter - Custom.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
@@ -144,7 +144,7 @@
                     <a href="https://samsherrod.itch.io/instagram-filter" target="_blank" class="btn btn-default btn-lg">Try Tool Online</a>
 
                     <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
-                        concerns. If you would like to see the code for this, please <a href="contact.html"><strong>contact</strong></a> me.</p>
+                        concerns. If you would like to see the code for this, please <a href="../contact.html"><strong>contact</strong></a> me.</p>
                 </div>
             </div>
         </div>
@@ -162,10 +162,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
